--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <title>Matts Weather Forecast</title>
   </head>
   <body>
-    <div class="header">BBC WEATHER</div>
+    <div class="navbar">
+      <img id="bbc_logo" src="./images/bbc_icon.png" />
+    </div>
+    <div class="header">WEATHER</div>
     <div class="searchBox">
       <label for="locationInput">Search Location:</label>
       <input type="text" name="locationInput" id="locationInput" />
