--- a/index.html
+++ b/index.html
@@ -14,14 +14,34 @@
     <div class="navbar">
       <img id="bbc_logo" src="./images/bbc_icon.png" />
     </div>
-    <div class="header">WEATHER</div>
-    <div class="searchBox">
-      <label for="locationInput">Search Location:</label>
-      <input type="text" name="locationInput" id="locationInput" />
-      <button id="locationSearch">Search</button>
-      <button id="currentLocation">My Location</button>
+    <div class="weatherbarwrap">
+      <div class="weatherbar">
+        WEATHER
+        <div class="searchBox">
+          <input
+            type="text"
+            name="locationInput"
+            id="locationInput"
+            value="Enter a town or city"
+          />
+          <div id="locationSearch">
+            <img id="mag_glass" src="./images/magblack.svg" />
+          </div>
+          <div id="currentLocation">
+            <svg
+              fill="white"
+              focusable="false"
+              aria-hidden="true"
+              viewBox="0 0 32 32"
+            >
+              <path
+                d="M16 31c8.5 0 15-6.5 15-15S24.5 1 16 1 1 7.5 1 16s6.5 15 15 15zm0-2.8C9.1 28.2 3.9 22.9 3.9 16S9.1 3.8 16 3.8c6.9 0 12.1 5.3 12.1 12.2S22.9 28.2 16 28.2zm-1.3.3h2.7l-.2-7.4h-2.3l-.2 7.4zM3.5 17.4l7.4-.2v-2.3l-7.4-.2v2.7zm11.4-6.6h2.3l.2-7.4h-2.7l.2 7.4zm13.7 6.6v-2.7l-7.4.2v2.3l7.4.2z"
+              ></path>
+            </svg>
+          </div>
+        </div>
+      </div>
     </div>
-
     <div id="weatherRoot"></div>
 
     <div id="locationList"></div>
