--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
     <div id="searchList">
       <ul data-suggestion></ul>
     </div>
+    <div class="map_box"><img class="map" src="./images/map.png" /></div>
   </body>
 </html>
