--- a/index.html
+++ b/index.html
@@ -42,13 +42,52 @@
         </div>
       </div>
     </div>
-    <div id="weatherRoot"></div>
 
     <div id="locationList"></div>
 
     <div id="searchList">
       <ul data-suggestion></ul>
     </div>
-    <div class="map_box"><img class="map" src="./images/map.png" /></div>
+    <div class="main_section">
+      <div class="spacer"></div>
+      <div class="weather_grid_case">
+        <div class="weather_cell1">
+          <div class="weather_inner_cell1">1</div>
+          <div class="weather_inner_cell2">2</div>
+          <div class="weather_inner_cell3">3</div>
+          <div class="weather_inner_cell4">4</div>
+          <div class="weather_inner_cell5">5</div>
+        </div>
+        <div class="weather_cell2">
+          <div class="weather_inner_cell1">1</div>
+          <div class="weather_inner_cell2">2</div>
+          <div class="weather_inner_cell3">3</div>
+          <div class="weather_inner_cell4">4</div>
+        </div>
+        <div class="weather_cell3">
+          <div class="weather_inner_cell1">1</div>
+          <div class="weather_inner_cell2">2</div>
+          <div class="weather_inner_cell3">3</div>
+          <div class="weather_inner_cell4">4</div>
+        </div>
+        <div class="weather_cell4">
+          <div class="weather_inner_cell1">1</div>
+          <div class="weather_inner_cell2">2</div>
+          <div class="weather_inner_cell3">3</div>
+          <div class="weather_inner_cell4">4</div>
+        </div>
+        <div class="weather_cell5">
+          <div class="weather_inner_cell1">1</div>
+          <div class="weather_inner_cell2">2</div>
+          <div class="weather_inner_cell3">3</div>
+          <div class="weather_inner_cell4">4</div>
+        </div>
+      </div>
+      <div id="weatherRoot"></div>
+      <div class="map_box_mobile">
+        <img class="map_mobile" src="./images/map.png" />
+      </div>
+      <div class="map_box"><img class="map" src="./images/map.png" /></div>
+    </div>
   </body>
 </html>
