--- a/index.html
+++ b/index.html
@@ -50,40 +50,10 @@
     </div>
     <div class="main_section">
       <div class="spacer"></div>
-      <div class="weather_grid_case">
-        <div class="weather_cell1">
-          <div class="weather_inner_cell1">1</div>
-          <div class="weather_inner_cell2">2</div>
-          <div class="weather_inner_cell3">3</div>
-          <div class="weather_inner_cell4">4</div>
-          <div class="weather_inner_cell5">5</div>
-        </div>
-        <div class="weather_cell2">
-          <div class="weather_inner_cell1">1</div>
-          <div class="weather_inner_cell2">2</div>
-          <div class="weather_inner_cell3">3</div>
-          <div class="weather_inner_cell4">4</div>
-        </div>
-        <div class="weather_cell3">
-          <div class="weather_inner_cell1">1</div>
-          <div class="weather_inner_cell2">2</div>
-          <div class="weather_inner_cell3">3</div>
-          <div class="weather_inner_cell4">4</div>
-        </div>
-        <div class="weather_cell4">
-          <div class="weather_inner_cell1">1</div>
-          <div class="weather_inner_cell2">2</div>
-          <div class="weather_inner_cell3">3</div>
-          <div class="weather_inner_cell4">4</div>
-        </div>
-        <div class="weather_cell5">
-          <div class="weather_inner_cell1">1</div>
-          <div class="weather_inner_cell2">2</div>
-          <div class="weather_inner_cell3">3</div>
-          <div class="weather_inner_cell4">4</div>
-        </div>
-      </div>
-      <div id="weatherRoot"></div>
+      <div id="weatherHeader"></div>
+      <div class="weather_grid_case" id="weatherRoot"></div>
+      <div class="spacer"></div>
+      <div></div>
       <div class="map_box_mobile">
         <img class="map_mobile" src="./images/map.png" />
       </div>
