--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <div class="main_section">
       <div class="spacer"></div>
       <div id="weatherHeader"></div>
+      <div id="spinner_box"></div>
       <div class="weather_grid_case" id="weatherRoot"></div>
       <div class="spacer"></div>
       <div></div>
