--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="navbar">
       <img id="bbc_logo" src="./images/bbc_icon.png" />
     </div>
-    <div class="weatherbarwrap">
-      <div class="weatherbar">
+    <div class="weatherbarwrap" id="weatherbarwrap">
+      <div class="weatherbar" id="weatherbar">
         WEATHER
         <div class="searchBox">
           <input
@@ -40,6 +40,7 @@
               ></path>
             </svg>
           </div>
+          <div id="closeSearchBox"></div>
         </div>
       </div>
     </div>
