--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./images/favicon-96x96.png"
+      sizes="96x96"
+    />
     <link rel="stylesheet" href="./style.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module" src="./searchLocation.js"></script>
     <script type="module" src="./currentLocation.js"></script>
     <script type="module" src="./htmlEditor.js"></script>
     <script type="module" src="./map.js"></script>
-    <title>Matts Weather Forecast</title>
+    <title>BBC Weather</title>
   </head>
   <body>
     <div class="navbar">
