--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     />
     <link rel="stylesheet" href="./style.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="./searchLocation.js"></script>
     <script type="module" src="./currentLocation.js"></script>
     <script type="module" src="./htmlEditor.js"></script>
     <script type="module" src="./map.js"></script>
+    <script type="module" src="./chart.js"></script>
     <title>BBC Weather</title>
   </head>
   <body>
@@ -146,6 +148,7 @@
       <div class="spacer"></div>
       <div class="spacer"></div>
       <div class="spacer"></div>
+      <div></div>
     </div>
   </body>
 </html>
