--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <title>BBC Weather</title>
   </head>
   <body>
+    TEST
     <div class="navbar">
       <img id="bbc_logo" src="./images/bbc_icon.png" />
     </div>
