added  chart.js

--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
       <div class="spacer"></div>
       <div class="spacer"></div>
       <div class="spacer"></div>
+
+      <div>
+        <canvas id="myChart"></canvas>
+      </div>
     </div>
   </body>
 </html>
